--- a/src/minidexed.ini
+++ b/src/minidexed.ini
@@ -3,8 +3,8 @@
 #
 
 # Sound device
-#SoundDevice=i2s
-SoundDevice=pwm
+SoundDevice=i2s
+#SoundDevice=pwm
 #SoundDevice=hdmi
 SampleRate=48000
 #ChunkSize=256
